--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label for="criancas">Crianças:</label>
                 <input type="number" id="criancas" min="0" placeholder="0">
             </div>
-            <button type="button" onclick="calcular()">Calcular</button>
+            <button type="button" onclick="calculate()">Calcular</button>
             <button type="button" onclick="clearList()">Limpar Lista</button>
         </form>
         <div id="resultado" class="resultado"></div>
