Mudança do nome da classe resultado

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button type="button" onclick="calculate()">Calcular</button>
             <button type="button" onclick="clearList()">Limpar Lista</button>
         </form>
-        <div id="resultado" class="resultado"></div>
+        <div id="result" class="result"></div>
     </div>
     <script src="script.js"></script>
 </body>
