--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Churrasco</h1>
+        <h1>Calculadora de Teste-01</h1>
         
         <form id="churrasco-form">
             <div class="input-group">
