--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Churrasco</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -28,6 +29,5 @@
         </form>
         <div id="result" class="result"></div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
